Clean up, modernisation a little, and fixed deprecations

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 APIconizer.xcodeproj/project.xcworkspace/xcuserdata
 APIconizer.xcodeproj/xcuserdata
+APIconizer.xcodeproj/project.xcworkspace/xcshareddata
